--- a/carbon5/src/R1Serveur/config.properties
+++ b/carbon5/src/R1Serveur/config.properties
@@ -1,4 +1,4 @@
 DriverName=com.mysql.jdbc.Driver
-database=jdbc:mysql://localhost:3306/test
+database=jdbc:mysql://localhost:3306/carbon5
 dbuser=root
-dbpassword=castell
+dbpassword=boubou
