--- a/carbon5/Client-Serveur/config.properties
+++ b/carbon5/Client-Serveur/config.properties
@@ -1,4 +1,4 @@
 DriverName=com.mysql.jdbc.Driver
-database=jdbc:mysql://localhost:3306/carbon5
+database=jdbc:mysql://localhost:3306/carbontestnew
 dbuser=root
-dbpassword=toto
+dbpassword=castell
