--- a/carbon5/.classpath
+++ b/carbon5/.classpath
@@ -2,9 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="Client-Serveur"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Utilisateur/Downloads/JAR/mysql-connector-java-5.1.16.jar/mysql-connector-java-5.1.16.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Utilisateur/Downloads/JAR/json-simple-1.1.jar/json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Utilisateur/Downloads/JAR/java-json.jar/java-json.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Utilisateur/Downloads/JAR/forms-1.3.0.jar/forms-1.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/dev/JAR/mysql-connector-java-5.1.16.jar/mysql-connector-java-5.1.16.jar"/>
+	<classpathentry kind="lib" path="C:/dev/JAR/json-simple-1.1.jar/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/dev/JAR/java-json.jar/java-json.jar"/>
+	<classpathentry kind="lib" path="C:/dev/JAR/forms-1.3.0.jar/forms-1.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/dev/JAR/log4j-1.2.17/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
